Update styles.css to correct collection titles visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ body {
 
 .card-meta {
     position: absolute;
-    bottom: -50px;
+    bottom: -40px;
     left: -40px;
     z-index: 30;
 }
